Add async operations
